; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_depr.c_BN_is_prime_fasttest.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_depr.c_BN_is_prime_fasttest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BN_is_prime_fasttest(i32* %0, i32 %1, void (i32, i32, i8*)* %2, i32* %3, i8* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca void (i32, i32, i8*)*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store void (i32, i32, i8*)* %2, void (i32, i32, i8*)** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %14 = load void (i32, i32, i8*)*, void (i32, i32, i8*)** %9, align 8
  %15 = load i8*, i8** %11, align 8
  %16 = call i32 @BN_GENCB_set_old(i32* %13, void (i32, i32, i8*)* %14, i8* %15)
  %17 = load i32*, i32** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32*, i32** %10, align 8
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @bn_check_prime_int(i32* %17, i32 %18, i32* %19, i32 %20, i32* %13)
  ret i32 %21
}

declare dso_local i32 @BN_GENCB_set_old(i32*, void (i32, i32, i8*)*, i8*) #1

declare dso_local i32 @bn_check_prime_int(i32*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
